src/components/MovieDetail/MovieDetails.css
@import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');

.hero-section {
    max-height: 100vh;
    display: grid;
    grid-template-columns: 25vw 45vw 15vw;
    justify-content: space-between;
    align-content: flex-end;
    grid-gap: 60px;
    position: relative;
}

.hero-section > *:not(.material-icons) {
    margin-top: 15vw;
}

.hero-section .material-icons {
    position: absolute;
    font-size: min(40px, 7vw);
    cursor: pointer;
    top: 2.1vw;
    left: 2.8vw;
    transition: color 0.2s ease-out;
}

.hero-section .material-icons:hover {
    color: lightgray;
}

.hero-section .poster {
    height: 35vw;
    border-radius: 18px;
    cursor: pointer;
    margin-bottom: 70px;
    margin-left: 40px;
    width: 25vw;
}

.hero-section .poster img {
    width: 100%;
    height: 100%;
    border-radius: 18px;
}

.hero-section .basic-info {
    align-self: end;
    margin-bottom: 50px;
    width: 50vw;
}

.hero-section .basic-info .movie-title h1 {
    font-size: 4.3vw;
    margin-bottom: 20px;
}

.hero-section .basic-info .movie-quote p {
    font-size: 2.15vw;
    color: gray;
    margin-top: 10px;
    font-family: 'Kalam', sans-serif;
}

.hero-section .basic-info .movie-genres {
    display: flex;
    flex-wrap: wrap;
    gap: 1.4vw;
    padding: 0;
}

.hero-section .basic-info .movie-genres li {
    list-style-type: none;
    border-radius: 48px;
    border: 2px solid rgba(255, 255, 255, .6);
    padding: 0.7vw 2.86vw;
    cursor: pointer;
    font-weight: bold;
    font-size: 1.3vw;
    transition: background-color 0.2s ease-out;
}

.hero-section .basic-info .movie-genres li:hover {
    background-color: rgba(50, 50, 50, .7);
}

.hero-section .movie-stats {
    align-self: end;
    margin-bottom: 5.5vw;
    font-size: 2.5vw;
    display: flex;
    gap: 1vw;
    width: 15vw;
}

.hero-section .movie-stats .rating {
    color: gray;
}

.details-section {
    display: grid;
    grid-template-columns: 70vw 20vw;
    gap: 7.5vw;
    margin-top: 1.6vw;
}

.details-section .movie-info .detailed-info{
    display: flex;
    gap: 3vw;
    border-bottom: 1px solid rgb(60, 60, 60);
    margin-left: 3vw;
    padding-bottom: 30px;
}

.details-section .movie-info .detailed-info .metadata {
    width: 12vw;
    display: flex;
}

.details-section .movie-info .detailed-info .metadata p {
    width: 100%;
    font-size: 2.8vw;
    font-weight: bold;
    margin-top: 30px;
}

.details-section .movie-info .detailed-info .overview {
    width: calc(100% - 12vw);
}

.details-section .movie-info .detailed-info .overview h3 {
    font-size: 1.8vw;
}

.details-section .movie-info .detailed-info .overview p {
    font-size: 1.45vw;
    color: gray;
    line-height: 2.5vw;
    padding-right: 2vw;
}

.details-section .movie-info .movie-trailer {
    height: 44vw;
    margin-top: 4vw;
    margin-left: 3vw;
    border-bottom: 1px solid rgb(60, 60, 60);
    padding-bottom: 10px;
}

.details-section .movie-info .movie-trailer h3 {
    font-size: 1.8vw;
}

.details-section .movie-info .movie-trailer iframe{
    width: 100%;
    height: 85%;
    border-radius: 25px;
}

.details-section .movie-credits {
    width: 20vw;
}

.details-section .movie-credits .cast-list {
    padding-bottom: 20px;
    border-bottom: 1px solid rgb(60, 60, 60);
}

.details-section .movie-credits .cast-list, .details-section .movie-credits .crew-list {
    width: 20vw;
}

.details-section .movie-credits .cast-list .cast-card-list, .details-section .movie-credits .crew-list .crew-card-list {
    display: flex;
    flex-direction: column;
    gap: 5px;
    overflow: scroll;
    height: 28vw;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.details-section .movie-credits .cast-list .cast-card-list::-webkit-scrollbar, .details-section .movie-credits .crew-list .crew-card-list::-webkit-scrollbar {
    display: none;
}

.details-section .movie-credits .cast-list h3,  .details-section .movie-credits .crew-list h3{
    font-size: 1.8vw;
}

.details-section .movie-credits .cast-list .cast-card, .details-section .movie-credits .crew-list .crew-card {
    cursor: pointer;
    width: 100%;
}

.details-section .movie-credits .cast-list .cast-card:hover, .details-section .movie-credits .crew-list .crew-card:hover {
    background-color: rgba(50,50,50,.4);
    border-radius: 25px;
}

.details-section .movie-credits .cast-list .cast-card .container, .details-section .movie-credits .crew-list .crew-card .container{
    display: flex;
    align-items: center;
    gap: 2vw;
    transition: transform 0.2s ease-out;
}

.details-section .movie-credits .cast-list .cast-card .container:hover, .details-section .movie-credits .crew-list .crew-card .container:hover {
    transform: translateX(0.7vw);
}

.details-section .movie-credits .cast-list .cast-card .cast-photo img, .details-section .movie-credits .crew-list .crew-card .crew-photo img{
    width: 3.5vw;
    height: 3.5vw;
    object-fit: cover;
    border-radius: 50%;
}

.details-section .movie-credits .cast-list .cast-card .cast-info .name, .details-section .movie-credits .crew-list .crew-card .crew-info .name {
    font-size: 1.4vw;
    font-weight: bold;
    margin-bottom: 5px;
    margin-top: 10px;
}

.details-section .movie-credits .cast-list .cast-card .cast-info .character, .details-section .movie-credits .crew-list .crew-card .crew-info .job {
    font-size: 1.4vw;
    color: gray;
    margin-top: 5px;
    margin-bottom: 10px;
}

.recommendations-section {
    margin: 0 3vw 15px 3vw;
    padding-bottom: 3vw;
    border-bottom: 1px solid rgb(60, 60, 60);
}

.recommendations-section h3 {
    font-size: 1.8vw;
}

.recommendations-section .recommendations-list {
    display: flex;
    gap: 15px;
    overflow: scroll;
    -ms-overflow-style: none;
    scrollbar-width: none;
}

.recommendations-section .recommendations-list::-webkit-scrollbar {
    display: none;
}

